# IPA-RS-AgentController

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.claude/skills/agentctl-overlay-workflow/: SKILL.md
.codex/skills/agentctl-overlay-workflow/: SKILL.md
.codex/skills/agentctl-overlay-workflow/agents/: openai.yaml
.github/workflows/: macos-native-smoke.yml  release.yml  windows-minifilter.yml
apps/agent-studio/: package-lock.json  package.json
apps/agent-studio/src/: App.tsx  api.ts  styles.css  types.ts
apps/agent-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent-studio/src-tauri/capabilities/: default.json
apps/agent-studio/src-tauri/src/: main.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: btrfs.rs  command.rs  config.rs  desktop.rs  export.rs  lib.rs  model.rs  nspawn.rs  path_overlay.rs  protocol.rs  reflink.rs  service.rs  session.rs  storage.rs
crates/agent-forkd/: Cargo.toml
crates/agent-forkd/src/: main.rs
crates/agent-minifilterctl/: Cargo.toml
crates/agent-minifilterctl/src/: main.rs
crates/agent-overlayfs/: Cargo.toml
crates/agent-overlayfs/src/: main.rs
crates/agent-viewd/: Cargo.toml
crates/agent-viewd/src/: main.rs
crates/agentctl/: Cargo.toml
crates/agentctl/src/: main.rs  studio.rs
crates/agentctl/tests/: privileged_sequence.rs
docs/: path-preserving-overlay.md
drivers/windows-minifilter/: README.md  agentfs.h  agentfs.inf  agentfs.vcxproj  driver.c
packaging/agent-forkd/: config.json
packaging/systemd/: agent-forkd.service
schemas/: base.schema.json  config.schema.json  env.schema.json  session.schema.json
scripts/: macos-macfuse-preflight.sh  macos-native-smoke.sh  windows-minifilter-project-smoke.ps1  windows-minifilter-smoke.ps1  windows-minifilter-ssh-smoke.sh
tests/: check-privileged-environment.sh  environment-requirements.md  goal-sequence.md  ssh-test-machine-requirements.md
