[workspace]
members = [
    "crates/agent-core",
    "crates/agent-overlayfs",
    "crates/agentctl",
    "crates/agent-forkd",
    "crates/agent-minifilterctl",
    "crates/agent-viewd",
]
exclude = ["apps/agent-studio/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/IPA-CyberLab/IPA-RS-IsolatedAgent"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
windows-sys = "0.59"
libc = "0.2"
