[package]
name = "agent-minifilterctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-minifilterctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
