[package]
name = "agent-overlayfs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-overlayfs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
agent-core = { path = "../agent-core" }

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.17.0", features = ["macfuse-4-compat", "macos-no-mount"] }
libc.workspace = true
