[package]
name = "agent-viewd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-viewd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile = "3.10"
