[package]
name = "agentctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agentctl"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
